# thunder-trader

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  _makefile  atm.json  nginx.example.conf  thunder-trader.conf.default
common/: AbandonOverlap.cpp  ArbitrageBaseFuture.h  ArbitrageBaseStock.h  AutoPend.cpp  BackTestResult.h  CommuniInterface.h  CustomArbitrageStrategyInterface.h  MySQLTickLoader.h  Order.h  OrderRefResolve.h  PackageDefine.h  QuantFundHFTBackTestTypedefine.h  ReportKernelInterface.h  ReportStructs.h  SimulateKernelInterface.h  StrategyContext.h  StrategyData.cpp  StrategyDefine.h  StrategyInquiryDataInterface.h  TickLoaderImp.h  USTPFtdcMduserApi.h  USTPFtdcTraderApi.h  USTPFtdcUserApiDataType.h  USTPFtdcUserApiStruct.h  config.h  config.h.in
common/CommonListCtrlEx/: ComboBoxExt.cpp  ComboBoxExt.h  EditEx.cpp  EditEx.h  ListCtrlCommon.h  ListCtrlEx.cpp  ListCtrlEx.h
common/CompreTradeSystemHeaders/: AtmTradePluginInterface.h  CommuModForServInterface.h  SeverityLevel.h  public.h
common/QuantTechStockQuotation/: QuantTechStockQuotationCliSpi.h  QuantTechStockQuotationInterface.h
common/Tick/: ForexTick.h  FutureTick.h  OptionTick.h
common/trade_headers/: AtmPluginInterface.h  CommuModForServInterface.h  TradePluginContextInterface.h
config_file_templates/: CTP_MD.json  CTP_TD.json
develop/pysimulate/: MySimulateKernel.cpp  MySimulateKernel.h  simulate_kernel.cpp  simulate_kernel.h
doc/: HFT-arbitrage.md  HFT-prepare.md  HFT-start.md  HFT-strategy.md  HFT-usage.md
monitor/: CommunicationModuleForClient.cpp  DlgAddSource.cpp  DlgAddSource.h  DlgDeployNewStrategy.cpp  DlgDeployNewStrategy.h  DlgMeddle.cpp  DlgMeddle.h  DlgSetShareValue.cpp  DlgSetShareValue.h  DlgUpdateOrderTicket.cpp  DlgUpdateOrderTicket.h  DlgUpdateStrategyBin.cpp  DlgUpdateStrategyBin.h  FloatingProfitDoc.cpp  FloatingProfitDoc.h  FloatingProfitFrm.cpp  FloatingProfitFrm.h  FloatingProfitView.cpp  FloatingProfitView.h  GraphDoc.cpp  GraphDoc.h  GraphFrm.cpp  GraphFrm.h  GraphView.cpp  GraphView.h  MainFrm.cpp  MainFrm.h  MeddleDoc.cpp  MeddleDoc.h  MeddleFrame.cpp  MeddleFrame.h  MeddleView.cpp  MeddleView.h  Monitor.aps  Monitor.cpp  Monitor.h  Monitor.json  Monitor.rc  Monitor.reg  Monitor.vcxproj  (+24 more)
monitor/css/: style.blue.css  style.default.css  style.green.css  style.pink.css  style.red.css  style.sea.css
monitor/data/: addresses.json  countries.json
monitor/js/: charts-custom.js  charts-home.js
monitor/res/: Monitor.rc2  ribbon.mfcribbon-ms  图标系列.jnt
strategies/: ArbitrageBaseFuture.cpp  Arbitrage_Future.cpp  arbitrage.cpp
strategies/DemoStrategy_Basic/: Create.bat  DemoStrategy_Basic.cpp  makefile
strategies/OptionArbitrageStrategy/: Create.bat  OptionArbitrageStrategy.cpp  makefile
strategies/PCLArbitrage_Future/: ArbitrageBaseFuture.cpp  Create.bat  PCLArbitrage_Future.cpp  makefile
strategies/PCL_CTA_Flactation/: Create.bat  PCL_CTA_Flactation.cpp  makefile
strategies/PSYOptionFutureArbitrage/: Create.bat  PSYOptionFutureArbitrage.cpp  makefile
strategies/TradeCheckStrategy/: Create.bat  TradeCheckStrategy.cpp  makefile
strategies/arbitrage/: strategy.cpp
strategies/arbitrage_future/: CMakeLists.txt  README.md  arbitrage_future.cpp
strategies/simple_strategy/: CMakeLists.txt  simple_strategy.cpp
strategies/strategy_common/: arbitrage_base_future.cpp
third/DfitcForLinux64/: DFITCSECApiDataType.h  DFITCSECApiStruct.h  DFITCSECTraderApi.h  error.xml
third/DfitcForWin32/: DFITCSECMdApi.h
third/HsStock/: HsStockTradeApiInterface.h  HsStockTradeDataStructs.h
third/Hundsum/: HundsunMdApi.h  HundsunTraderApi.h  HundsunUserApiStruct.h
third/TwsApi/: TwsApi.h  TwsDataStructDef.h  TwsDataTypeDef.h  TwsSpi.h
thunder_trader_common/: AutoPend.h  BackTestResult.h  CrossPlatformDefinitions.h  LimitOrderTransactionBase.h  ReportKernelInterface.h  SimulateKernelEnvironment.h  StrategyData.h  TickDataContainer.h  config.h
thunder_trader_common/proto/tick/: BasicTick.proto  CTP.proto
thunder_trader_common/tick/: StockTick.h  Tick.h  TwsTick.h
thunder_trader_common/trade_headers/: AtmMarketDataPluginInterface.h  AtmPluginInterface.h  AtmTradePluginInterface.h  CommuModForClieInterface.h  CommuModForServInterface.h  TradePluginContextInterface.h  public.h
trade/: ATM.cpp  TradeService.cpp  TradingDay.con  connection.cpp  connection.hpp  io_service_pool.cpp  io_service_pool.hpp  main.cpp  public.h  server.cpp  server.hpp  trade_service.cpp  trade_service.h
trade/AtmMarketDataPlugins/DFITC_STOCK_MDPlugin/: DFITC_STOCK_MDPlugin.h
trade/AtmMarketDataPlugins/FIX_CYCLE_PRICE_MDPlugin/: FIX_CYCLE_PRICE_MDPlugin.cpp
trade/AtmMarketDataPlugins/QT_STOCK_MDPlugin/: QT_STOCK_MDPlugin.cpp
trade/AtmTradePlugins/FEMAS_FUTURE_TDPlugin/: FEMAS_FUTURE_TDPlugin.h
trade/AtmTradePlugins/TEMPLATE_ANY_TDPlugin/: TEMPLATE_ANY_TDPlugin.cpp
trade/AtmTradePlugins/TWS_TDPlugin/: TWS_TDPlugin.cpp
trade/md_plugins/CTP_FUTURE_MDPlugin/: CTP_FUTURE_MDPlugin.cpp  CTP_FUTURE_MDPlugin.h
trade/md_plugins/DFITC_SOP_MDPlugin/: DFITC_SOP_MDPlugin.cpp  DFITC_SOP_MDPlugin.h
trade/md_plugins/FEMAS_FUTURE_MDPlugin/: FEMAS_FUTURE_MDPlugin.cpp  FEMAS_FUTURE_MDPlugin.h
trade/md_plugins/FIX_CYCLE_PRICE_MDPlugin/: FIX_CYCLE_PRICE_MDPlugin.h
trade/md_plugins/QT_STOCK_MDPlugin/: QT_STOCK_MDPlugin.cpp
trade/md_plugins/TWS_MDPlugin/: TWS_MDPlugin.h
trade/md_plugins/XXX_XXX_MDPlugin/: XXX_XXX_MDPlugin.cpp  XXX_XXX_MDPlugin.h
trade/trade_plugins/CTP_FUTURE_TDPlugin/: CTP_FUTURE_TDPlugin.cpp  CTP_FUTURE_TDPlugin.h
trade/trade_plugins/DFITC_SOP_TDPlugin/: DFITC_SOP_TDPlugin.cpp  DFITC_SOP_TDPlugin.h
trade/trade_plugins/FEMAS_FUTURE_TDPlugin/: FEMAS_FUTURE_TDPlugin.cpp  FEMAS_FUTURE_TDPlugin.h
trade/trade_plugins/TEMPLATE_ANY_TDPlugin/: TEMPLATE_ANY_TDPlugin.h
trade/trade_plugins/TWS_TDPlugin/: TWS_TDPlugin.cpp  TWS_TDPlugin.h
trade_system/: server.cpp
trade_system/AtmMarketDataPlugins/CTP_FUTURE_MDPlugin/: CTP_FUTURE_MDPlugin.cpp  CTP_FUTURE_MDPlugin.h
trade_system/AtmMarketDataPlugins/DFITC_SOP_MDPlugin/: DFITC_SOP_MDPlugin.cpp  (+1 more)
(+13 files in other folders)
